--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,4 +9,88 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <!-- Context parameter ( 전역 파라미터 ) -->
+
+         <context-param>
+
+                  <param-name>contextConfigLocation</param-name>
+
+                  <param-value>/WEB-INF/applicationContext.xml</param-value>
+
+         </context-param>
+
+
+
+         <!-- Context Loader Listner -->
+
+         <listener>
+
+                  <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+
+         </listener>
+
+
+
+         <!--  DispatcherServlet -->
+
+         <servlet>
+
+                  <servlet-name>spring</servlet-name>
+
+                  <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+
+         </servlet>
+
+
+
+         <servlet-mapping>
+
+                  <servlet-name>spring</servlet-name>
+
+                  <url-pattern>/</url-pattern>
+
+         </servlet-mapping>
+
+
+
+         <!-- Encoding Filter -->
+
+         <filter>
+
+                  <filter-name>encodingFilter</filter-name>
+
+                  <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+
+                  <init-param>
+
+                           <param-name>encoding</param-name>
+
+                           <param-value>UTF-8</param-value>
+
+                  </init-param>
+
+
+
+                  <init-param>
+
+                           <param-name>forceEncoding</param-name>
+
+                           <param-value>true</param-value>
+
+                  </init-param>
+
+         </filter>
+
+
+
+         <filter-mapping>
+
+                  <filter-name>encodingFilter</filter-name>
+
+                  <url-pattern>/*</url-pattern>
+
+         </filter-mapping>
+
+
 </web-app>
