--- a/pom.xml
+++ b/pom.xml
@@ -1,159 +1,51 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>DJV-project</groupId>
-  <artifactId>DJV-project</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>war</packaging>
-  
-  
-  <name>DJV</name>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.1.3.RELEASE</version>
+		<relativePath/> <!-- lookup parent from repository -->
+	</parent>
+	<groupId>com.example</groupId>
+	<artifactId>demo</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>demo</name>
+	<description>Demo project for Spring Boot</description>
+
+	<properties>
+		<java.version>1.8</java.version>
+	</properties>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 
-
-
-         <properties>
-
-                  <org.springframework-version> 4.1.2.RELEASE </org.springframework-version>
-
-         </properties>
-
-
-
-         <dependencies>
-
-                  <!-- Spring Application Context -->
-
-                  <dependency>
-
-                           <groupId>org.springframework</groupId>
-
-                           <artifactId>spring-context</artifactId>
-
-                           <version>${org.springframework-version}</version>
-
-                  </dependency>
-
-
-
-                  <!-- Spring MVC -->
-
-                  <dependency>
-
-                           <groupId>org.springframework</groupId>
-
-                           <artifactId>spring-web</artifactId>
-
-                           <version>${org.springframework-version}</version>
-
-                  </dependency>
-
-
-
-                  <dependency>
-
-                           <groupId>org.springframework</groupId>
-
-                           <artifactId>spring-webmvc</artifactId>
-
-                           <version>${org.springframework-version}</version>
-
-                  </dependency>
-
-
-
-                  <!-- JSTL -->
-
-                  <dependency>
-
-                           <groupId>jstl</groupId>
-
-                           <artifactId>jstl</artifactId>
-
-                           <version>1.2</version>
-
-                  </dependency>
-
-
-
-                  <!-- 스프링 ORM -->
-
-                  <dependency>
-
-                       <groupId>org.springframework</groupId>
-
-                       <artifactId>spring-orm</artifactId>
-
-                       <version>${org.springframework-version}</version>
-
-                  </dependency>
-
-
-
-                  <!-- JPA, Hibernate -->
-
-                  <dependency>
-
-                       <groupId>org.hibernate</groupId>
-
-                       <artifactId>hibernate-entitymanager</artifactId>
-
-                       <version>5.0.11.Final</version>
-
-                  </dependency>
-
-
-
-                  <!-- Common DBCP(Database Connection Pool) -->
-
-                  <dependency>
-
-                      <groupId>commons-dbcp</groupId>
-
-                      <artifactId>commons-dbcp</artifactId>
-
-                      <version>1.4</version>
-
-                  </dependency>
-
-
-
-                  <!-- MySQL JDBC Driver -->
-
-                  <dependency>
-
-                     <groupId>mysql</groupId>
-
-                     <artifactId>mysql-connector-java</artifactId>
-
-                     <version>5.1.38</version>
-
-                  </dependency>
-
-
-
-         </dependencies>
-
-
-  
-  
-  
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.0</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>3.2.1</version>
-        <configuration>
-          <warSourceDirectory>WebContent</warSourceDirectory>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
 </project>
