[db]-도커 컨테이너 mysql 연결

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.show-sql=true
 
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/djv?useUnicode=true&charaterEncoding=utf-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/webStudy?useUnicode=true&charaterEncoding=utf-8&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=password
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
